--- a/index.html
+++ b/index.html
@@ -7,20 +7,30 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <nav role="navigation">Nav</nav>
+    <nav role="navigation">Nav
+        <ul class="menu">
+            <li class="home"><a href="index.html">Home</a></li>
+            <li class="right"><a href="javascript:void(0);" class="projects-button">Projects</a></li>
+            <li class="right"><a target="_blank" href="https://www.linkedin.com/in/sarahbbeck/">LinkedIn</a></li>
+            <li class="right"><a target="_blank" href="https://github.com/sandler/">Github</a></li>
+            
+        </ul>
+
+
+    </nav>
     <main role="main">
-        <header role="header">
+        <header class="header">
             <h1>Hi, I’m Sarah Beck, a software developer currently based in Nashville, Tennessee. </h1>
         </header>
 
-        <section>
+        <section class="bio">
 			Coming from the background of a technical writer, I got to see the end result of software and I knew that I wanted to use it myself to solve people’s problems. What I find most satisfying about coding is watching a webpage, design, or component come to life on a page I’ve developed.<br> 
 			When I’m not coding, you can find me geeking out over architecture, design, and grammar, playing TTRPGs, or curled up in an armchair with a good book and a cup of tea.<br>
 			I can be best reached at sarahbeck104@gmail.com. <br>
 			I look forward to hearing from you!
         </section>
 
-        <section>
+        <section class="projects">
 			<img src="quiz app screenshot.png" alt="screenshot of quiz app"><br>
 			Quiz App: This is a web application where you can test your knowledge of hockey as a sport, and receive feedback through a quiz. It’s made with HTML, CSS, JavaScript, and jQuery.
 			<a href="https://sarahbeck104.github.io/Quiz-App/" title="Live page">Live Demo</a>
