--- a/index.html
+++ b/index.html
@@ -4,27 +4,25 @@
     <title>HTML wireframe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <nav role="navigation">Nav
+    <nav role="navigation">
+            <a href="index.html" class="home">Home</a>
         <ul class="menu">
-            <li class="home"><a href="index.html">Home</a></li>
-            <li class="right"><a href="javascript:void(0);" class="projects-button">Projects</a></li>
+            <li class="right"><a href="#" class="projects-button">Projects</a></li>
             <li class="right"><a target="_blank" href="https://www.linkedin.com/in/sarahbbeck/">LinkedIn</a></li>
-            <li class="right"><a target="_blank" href="https://github.com/sandler/">Github</a></li>
+            <li class="right"><a target="_blank" href="https://github.com/SarahBeck104/">Github</a></li>
             
         </ul>
 
 
     </nav>
     <main role="main">
-        <header class="header">
-            <h1>Hi, I’m Sarah Beck, a software developer currently based in Nashville, Tennessee. </h1>
-        </header>
 
         <section class="bio">
-			Coming from the background of a technical writer, I got to see the end result of software and I knew that I wanted to use it myself to solve people’s problems. What I find most satisfying about coding is watching a webpage, design, or component come to life on a page I’ve developed.<br> 
+			Hi, I’m Sarah Beck, a software developer currently based in Nashville, Tennessee. Coming from the background of a technical writer, I got to see the end result of software and I knew that I wanted to use it myself to solve people’s problems. What I find most satisfying about coding is watching a webpage, design, or component come to life on a page I’ve developed.<br> 
 			When I’m not coding, you can find me geeking out over architecture, design, and grammar, playing TTRPGs, or curled up in an armchair with a good book and a cup of tea.<br>
 			I can be best reached at sarahbeck104@gmail.com. <br>
 			I look forward to hearing from you!
@@ -32,12 +30,19 @@
 
         <section class="projects">
 			<img src="quiz app screenshot.png" alt="screenshot of quiz app"><br>
-			Quiz App: This is a web application where you can test your knowledge of hockey as a sport, and receive feedback through a quiz. It’s made with HTML, CSS, JavaScript, and jQuery.
-			<a href="https://sarahbeck104.github.io/Quiz-App/" title="Live page">Live Demo</a>
-			<a href="https://github.com/SarahBeck104/Quiz-App/" title="Github repository">Code</a>
+			<p>Hockey Quiz: This is a web application where you can test your knowledge of hockey as a sport, and receive feedback through a quiz. It’s made with HTML, CSS, JavaScript, and jQuery.</p>
+			<a href="https://sarahbeck104.github.io/Quiz-App/" title="Live page" target="_blank">Live Demo</a>
+			<a href="https://github.com/SarahBeck104/Quiz-App/" title="Github repository" target="_blank">Code</a>
         </section>
 
     </main>
-    <footer role="contact">Footer</footer>
+    <footer role="contact">
+        <a href="https://www.linkedin.com/in/sarahbbeck/" target="_blank" alt="linkedin-icon" class="fa fa-linkedin"></a>
+        <a href="https://github.com/SarahBeck104/" target="_blank" alt="github-icon" class="fa fa-github"></a>
+        <a href="mailto:sarahbeck104@gmail.com" class="fa fa-envelope"></a>
+
+    </footer>
+    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 </body>
 </html>
