Updated screenshot path

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <section class="projects">
-			<img src="quiz app screenshot.png" alt="screenshot of quiz app"><br>
+			<img src="quiz-app-screenshot.png" alt="screenshot of quiz app"><br>
 			<p>Hockey Quiz: This is a web application where you can test your knowledge of hockey as a sport, and receive feedback through a quiz. It’s made with HTML, CSS, JavaScript, and jQuery.</p>
 			<a href="https://sarahbeck104.github.io/Quiz-App/" title="Live page" target="_blank">Live Demo</a>
 			<a href="https://github.com/SarahBeck104/Quiz-App/" title="Github repository" target="_blank">Code</a>
